fullstack-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-backend
  labels:
    deployment: fullstack-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fullstack-backend
  template:
    metadata:
      labels:
        deployment: fullstack-backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: fullstack-backend
          image: 355446107250.dkr.ecr.us-east-1.amazonaws.com/fullstack-devops/backend:master-3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: fullstack-backend
  labels:
    app: fullstack-backend-service
spec:
  selector:
    deployment: fullstack-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
